# rtt_typekit_generator

./: CMakeLists.txt  README.md  package.xml
cmake/: orocos_typekit_headers-cmake2-helpers.cmake  orocos_typekit_headers.cmake  rtt_typekit_generatorConfig.cmake.in  rtt_typekit_generatorConfigVersion.cmake.in
include/rtt_typekit_generator/: archive.h  generator.h  introspection.h
include/rtt_typekit_generator/details/: introspection.h
include/rtt_typekit_generator/rtt/: TypeInfo.hpp
src/: generator.cpp
src/templates/: CMakeLists.txt.in  Types.hpp.in  introspection.cpp.in  typekit.cpp.in
src/templates/corba/: CMakeLists.txt.in  transport.cpp.in
src/transports/: corba-types.h  corba.cpp
tests/: CMakeLists.txt  test.cpp
tests/include/: foo.h
